[package]
name = "pinocchio-timebase-vault"
version = "0.1.0"
edition = "2021"
authors = ["Leo Pham <https://github.com/HongThaiPham>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.9.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"

[dev-dependencies]
mollusk-svm = "0.5.1"
pinocchio-log = "0.5.0"
solana-sdk = "2.3.0"
